removing overflow-y in .panel-body to fix #77

--- a/app/css/_board.scss
+++ b/app/css/_board.scss
@@ -97,7 +97,6 @@
 
 .panel-body {
 	height: 80vh;
-	overflow-y: scroll;
 	overflow-x: hidden;
 	min-height: 450px;
 }
